Fix Modal overflow

--- a/src/styles/partials/modal.styl
+++ b/src/styles/partials/modal.styl
@@ -8,6 +8,8 @@
   left: 0;
   right: 0;
   bottom: 0;
+  
+  overflow-y: auto;
 
   background-color: $clrTransparent25;
 }
@@ -18,7 +20,7 @@
   
   max-width: 960px;
   
-  margin: 3rem auto 0 auto;
+  margin: 3rem auto 1rem auto;
   padding: 0 1.5rem;
   
   @media ({$bpMaxW320}) {
